--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <section class="main__sales">
       <article class="main__sales__box">
         <div class="main__sales__box-title">
-          <p>Total de ventas de <span>septiembre</span></p> <i class="fas fa-info-circle"></i></i> 
+          <p>Total de ventas de <span>septiembre  </span></p>   <i class="fas fa-info-circle"></i> 
         </div>
         <div class="main__sales__box-amount">
           <p id="total-ventas">$1'560.000</p>
@@ -32,9 +32,9 @@
 
     <section class="main__buttons">
       <div  class="main__buttons-date">
-        <p>Hoy</p>
-        <p>Esta semana</p>
-        <p>Septiembre</p>
+        <p data-date="hoy" id="hoy">Hoy</p>
+        <p data-date="semana" id="semana" >Esta semana</p>
+        <p data-date="mes" id="mes">Septiembre</p>
       </div>
       <div class="main__buttons-filter">
         <div>
@@ -44,28 +44,30 @@
     </section>
 
     <section class="main__table">
-      <div class="raw__title">
+      <div class="row__title">
         <p>Tus ventas de <span>Septiembre</span></p>
       </div>
-      <div class="raw__desc">
+      <div class="row__desc">
         <p>Transacción</p>
         <p>Fecha y hora</p>
         <p>Método de pago</p>
         <p>Id de transaccion</p>
         <p>Monto</p>
       </div>
-      <div class="raw__table-transactions">
-        <div class="raw__table-transactions-raw">
-          <p id="succes">Cobro exitoso</p>
+      <div class="row__table-transactions">
+        <div class="row__table-transactions-row">
+          <!-- <p id="succes"><i class="fas fa-link"></i> Cobro exitoso</p> #} -->
+          <p id="succes"><i class="fas fa-mobile-alt"></i> Cobro exitoso</p>
           <p id="date">04/06/2020 - 17:14:24</p>
-          <p id="card">**** **** **** 7711</p>
+          <p id="card"><i class="fab fa-cc-mastercard"></i> **** **** **** 7711</p>
           <p id="id">GZQBEBDAHS</p>
-          <div id="">
+          <div id="amount">
             <p>$25.000</p>
             <p>Deduccion Bold</p>
             <p>-$1.500</p>
           </div>
         </div>
+        
       </div>
     </section>
   </main>
