pintar html  js

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <p>Id de transaccion</p>
         <p>Monto</p>
       </div>
-      <div class="row__table-transactions">
+      <div class="row__table-transactions " id="table-container">
         <div class="row__table-transactions-row">
           <!-- <p id="succes"><i class="fas fa-link"></i> Cobro exitoso</p> #} -->
           <p id="succes"><i class="fas fa-mobile-alt"></i> Cobro exitoso</p>
